$Id: ChangeLog 2008/02/19 12:18:34 mallet $
	
kppInterface 1.2 released February 19, 2008

	30. Avoid duplication of devices when adding a problem.
	29. Added LT roadmap builder and SLERP steering method
	    (undocumented kineoworks class) in the panel. 
	28. Adding documentation for using the panel in kppInterface.
	27. Added PCA roadmap builder in the configuration panel
	26. Added selections for kwsPlus steering methods.
	25. Adding problems via the configuration Panel.
	24. Added a panel for configuring planners.
	23. Added a default delegate for roadmaps graphical display.
	22. Link with KineoPathPlanner.pc flags instead of
	    KineoController.pc flags.
	21. Added output when menu is created.
	20. In KwsGraphicRoadmap, nodes are now displayed by a cube.
	19. Modification of KwsGraphicRoadmap to allow drawing of each
	    joint's roadmap separately. Joints that will be drawn are
	    selected via their displayPath property
	18. Reorganization of header files to solve some compilation problems.

kppInterface 1.1 released October 10, 2007
	
	17. Modify kppInterface.pc.in to take into account the fact that
	    libkppInterface.* is now installed in
	    $(prefix)/lib/module/$(LICENSE_HOST).
	16. CkppInterface is not abstract anymore. As a consequence, this
	    packages implements a minimal KPP module.
	15. Migrate "start corba server" command from kppInterfaceWalk to
	    kppInterface
	14. Added ON_IDLE notification to handle CORBA requests according
	    to new hppCorbaServer thread policy.
	13. Correction in notification treatment: adding an obstacle is
	    now different from inserting a new list of obstacles.
	12. Assemblies are now supported.
	
kppInterface 1.0 released August 27th, 2007

	11. Replaced ChppDevice by CkppDeviceComponent since 
	  a. ChppDevice derives from CkppDeviceComponent and
	  b. the operations performed on objects of this type only concern
	     CkppDeviceComponent part.