@@ -1,4 +1,5 @@
 $Id: ChangeLog 2008/02/19 12:18:34 mallet $
+        31. Simplify CkppInterface::hppSetObstacleList
 	
 kppInterface 1.2 released February 19, 2008
 
